# aggeodata

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
options/: aggeodata_config.yaml  climate_summary_sea_2014.yaml  gha_test_datacube.yaml  gha_test_download.yaml  gha_test_summarization.yaml  hnd_test_datacube.yaml  hnd_test_download.yaml  hnd_test_summarization.yaml
src/aggeodata/: __init__.py  mcp_server.py
src/aggeodata/config/: __init__.py  loader.py  schemas.py
src/aggeodata/features/: climate_indices.py  met_summaries.py
src/aggeodata/ingestion/: __init__.py  agera5.py  boundaries.py  cf_names.py  chirps.py  chirts.py  climate.py  files_manager.py  gee.py  gis_functions.py  nasa_power.py  soil.py  utils.py
src/aggeodata/pipelines/: __init__.py  datacube.py  download.py
src/aggeodata/transform/: __init__.py  climate_cube.py  soil_cube.py
src/aggeodata/utils/: spatial_utils.py  visualization.py
